fixing the color and contrast

--- a/project refactoring module/scripts.css
+++ b/project refactoring module/scripts.css
@@ -1,20 +1,21 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap");
 
 * {
     box-sizing: border-box;
 }
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
 }
 
 body {
     background: #3b4acd;
-    color: #A5B2D3;
-    padding: .5em;
+    color: #a5b2d3;
+    padding: 0.5em;
     font-family: serif;
     height: 100vh;
-    text-align:center;
+    text-align: center;
 }
 
 header {
@@ -32,7 +33,6 @@ a {
     color: white;
 }
 
-
 ul {
     list-style: none;
     padding: 0;
@@ -45,17 +45,16 @@ a.logo {
 
 a.cta-btn {
     margin-left: auto;
-    background: #FC85AE;
+    background: #fc85ae;
     padding: 1em;
     display: inline-block;
     border-radius: 2em;
-    font-size: .6em;
-    color: #303A52;
+    font-size: 0.6em;
+    color: #303a52;
     font-weight: bold;
 }
 
 /* Navigation */
-
 
 nav {
     position: fixed;
@@ -67,10 +66,9 @@ nav {
     visibility: hidden;
     transform: translateX(-50%);
     opacity: 0;
-    transition: all .3s;
+    transition: all 0.3s;
     text-align: center;
 }
-
 
 nav p {
     margin-bottom: 0;
@@ -83,12 +81,12 @@ nav svg {
 
 nav ul li a {
     display: block;
-    padding: .2em;
+    padding: 0.2em;
     font-size: 1.8em;
 }
 
 .selected {
-    background: #9E579D;
+    background: #9e579d;
 }
 
 .open-nav {
@@ -97,9 +95,7 @@ nav ul li a {
     transform: translateX(0);
 }
 
-
 /* Main Section */
-
 
 h1 {
     color: white;
@@ -107,12 +103,12 @@ h1 {
 }
 
 .panel {
-    background: #39445F;
-    border-radius: .3em;
+    background: #39445f;
+    border-radius: 0.3em;
 }
 
 h3 {
-    color: #FC85AE;
+    color: #fc85ae;
     margin: 0;
     font-size: 2em;
 }
@@ -121,7 +117,7 @@ ul.data li p {
     color: white;
     font-weight: bold;
     font-size: 1.8em;
-    margin: .3em 0 1em;
+    margin: 0.3em 0 1em;
 }
 
 ul.data li:last-child p {
@@ -138,5 +134,10 @@ main {
     border: 1px solid white;
 }
 
-
 /* Your Fixes Below */
+body {
+    background-color: #173746;
+}
+.open-nav {
+    background-color: #414756;
+}
